<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/google"
        android:layout_marginLeft="72dp"
        android:layout_below="@id/or"
        android:layout_marginTop="30dp" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/or"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/facebook" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/twitter"
        android:layout_marginLeft="250dp"
        android:layout_below="@id/or"
        android:layout_marginTop="30dp" />
    <TextView
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:layout_below="@id/btn2"
        android:textColor="@color/white"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/baseline_check_box_outline_blank_24"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"/>


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/forgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_toEndOf="@id/remember"
        android:text="@string/forget"
        android:textColor="@color/glod"
        android:layout_below="@id/btn2"
        android:layout_marginTop="10dp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/or"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_marginTop="250dp"
        android:textSize="50sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/app_name"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/glod"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn1"
        android:width="310dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_title"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/glod"
        android:text="@string/email"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/baseline_person_24" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn2"
        android:width="310dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn1"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/glod"
        android:text="@string/Sandi"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/baseline_lock_24"/>
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:width="100dp"
        android:text="@string/log"
        android:backgroundTint="@color/glod"
        android:textColor="@color/black"/>


</RelativeLayout>